# Sistemas_Embebidos

Taller11_SystemC/: README.md
Taller11_SystemC/counter/: Makefile  counter.vcd  first_counter.cpp  test_counter  test_counter.cpp
Taller11_SystemC/state_machine/: Makefile  coffeeM.vcd  statemachine.cpp  test_statemachine  test_statemachine.cpp
Taller2_GCC/: README.md
Taller3_Makefile/: Makefile  README.md
Taller3_Makefile/include/: mymath.h
Taller3_Makefile/lib/: Makefile
Taller3_Makefile/src/: Makefile
Taller4_Autotools/: Makefile.in  README.md  configure  configure.ac
Taller4_Autotools/lib/: Makefile.am  Makefile.in  mymath.c
Taller4_Autotools/src/: Makefile.am  Makefile.in  main.c
Taller5_CMake/: CMakeLists.txt  README.md  main.c
Taller5_CMake/lib/: CMakeLists.txt
Taller7_Yocto/: README.md  README.odt  configure.ac
Taller7_Yocto/include/: gpiorasp2.h
Taller7_Yocto/lib/: Makefile.am  gpiorasp2.c
Taller7_Yocto/src/: Makefile.am  gpiotest.c
Taller8_linux_driver/: Makefile  README.md  memory.c  memory.ko  memory.mod.c  modules.order
Taller_KPN/: README.md  factorial.py  fibonacci.py
